tdf#117403 RTF import: fix lost cell border of merged cell

If two source cells have different border types, then Writer takes the
second, Word takes the first. So mimic the MSO behavior explicitly in
dmapper.

(cherry picked from commit 42b32321381126ad70700424b8970dbc45a843f5)

Change-Id: I25adc62e024a929216c7b05fec44e1f602f28285
Reviewed-on: https://gerrit.libreoffice.org/54089
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 9223a8766e5a055f77e9cc7bccbfa718e6122e28)